fix: Form field search spacing issue

--- a/src/assets/styles/_fy_select.scss
+++ b/src/assets/styles/_fy_select.scss
@@ -85,6 +85,16 @@ $sub-title: #ababab;
     min-height: 40px;
   }
 
+  ::ng-deep .mat-mdc-text-field-wrapper.mdc-text-field--outlined .mat-mdc-form-field-icon-prefix {
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+
+    button {
+      min-height: 40px;
+    }
+  }
+
   ::ng-deep .mat-icon {
     display: flex;
     align-items: center;
